--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,6 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+// Google fonts
+// @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
