--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,8 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+@import "fonts";
+@import "cards";
+@import "banner";
+@import "dark_mode";
+@import "footer";
