--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,14 +1,24 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://www.pollinations.ai/prompt/cocktails-fun-laughter-bar-tender-fireworks);">
   <div class="container">
-    <h1>Keep a journal of your favorite <strong>Cocktail</strong> recipes!</h1>
-    <p>It's easy to get started.</p>
+    <h1>A community collection of <strong>Cocktail</strong> recipes!</h1>
+    <p>Add one now and share it to the world.</p>
     <%= link_to new_cocktail_path, class: "btn btn-primary btn-lg" do%>
-    Create <i class="fa-duotone fa-solid fa-martini-glass-citrus"></i>
+      Create <i class="fa-duotone fa-solid fa-martini-glass-citrus"></i>
     <% end %>
   </div>
 </div>
 <div class="container mt-4">
   <h1 class="mt-5 mb-3 fst-italic">COCKTAILS <i class="fa-solid fa-martini-glass fs-2"></i></h1>
+  <!-- search bar -->
+  <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+    <div class="search-form-control form-group mt-5 mb-4">
+      <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+      <button name="button" type="submit" class="btn btn-info">
+        <i class="fas fa-search"></i> Search
+      </button>
+    </div>
+  <% end %>
+  <!-- cocktail collection -->
   <div class="row d-flex justify-content-between">
     <% @cocktails.each do |cocktail| %>
       <div class="col-12 col-md-6 col-lg-4">
