show page layout complete with div skeleton

--- a/app/assets/stylesheets/components/_fonts.scss
+++ b/app/assets/stylesheets/components/_fonts.scss
@@ -21,6 +21,14 @@ h2 {
     0 0 40px #00FFFF;
 }
 
+h4 {
+  color: #D8B4FE;
+}
+
+.text-grey {
+  color: #D3D3D3;
+}
+
 .ingredients {
   color: #D8B4FE;
 }
