--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,3 +1,25 @@
 <div class="container">
   <h1 class="my-5"><%= @cocktail.name.upcase %> <i class="fa-solid fa-martini-glass fs-2"></i></h1>
+  <div class="row justify-content-between align-items-top">
+    <!-- cocktail image -->
+    <div class="col-12 col-lg-6 card rounded p-3">
+      <%= image_tag "https://www.pollinations.ai/prompt/#{@cocktail.name} cocktail drink", alt: @cocktail.name, class: "rounded img-fluid" %>
+      </div>
+    <!-- recipe -->
+    <div class="col-12 col-lg-5 me-5">
+      <div class="vstack gap-2">
+        <!-- description & how to -->
+        <h2 class="mb-3">Recipe</h2>
+        <div class="text-grey">
+          <h4>Description</h4>
+          <p>this is it!</p>
+        </div>
+        <!-- ingredients -->
+        <div class="text-grey">
+          <h4>Ingredients</h4>
+          <p>List it</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
