--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -3,35 +3,43 @@
   <!-- Create cocktail -->
   <div class="row">
     <div class="col-12" data-controller="form-field-vis">
-      <%= simple_form_for @cocktail do |f| %>
-        <%= f.input :name, class: "" %>
-        <%= f.input :description %>
+      <%= simple_form_for @cocktail, class: "form-control" do |f| %>
+        <%= f.input :name %>
+        <%= f.input :description, as: :text %>
         <!-- Create doses and associated ingredients -->
         <h3 class="pink-font">Ingredients (up to 5)</h3>
         <% counter = 0 %>
         <%= f.simple_fields_for :doses do |dose_form| %>
           <% counter += 1 %>
-          <h4 data-form-field-vis-target="headerFour" hidden>Ingredient <%= counter %></h4>
-          <%= dose_form.hidden_field :amount, label: "Amount (ml)", data: { "form-field-vis-target": "doseAmount"} %>
-          <%= dose_form.hidden_field :ingredient_id, collection: Ingredient.all, prompt: "Select Existing Ingredient", data: { "form-field-vis-target": "newIngredient" } %>
-          <p data-form-field-vis-target="paragraph" hidden>Or create a new ingredient (optional)</p>
-          <%= dose_form.simple_fields_for :ingredient do |ingredient_form| %>
-            <%= ingredient_form.hidden_field :name, label: "New Ingredient Name", data: { "form-field-vis-target": "selectIngredient"} %>
-          <% end %>
+          <div data-form-field-vis-target="ingredient" hidden>
+            <!-- Hidden input field with `_destroy` as a substring value of the name attribute -->
+            <%= dose_form.input :_destroy, as: :hidden %>
+
+            <h4>Ingredient <%= counter %></h4>
+            <%= dose_form.input :amount, label: "Amount (ml)" %>
+            <%= dose_form.input :ingredient_id, collection: Ingredient.all, prompt: "Select Existing Ingredient" %>
+            <p>Or create a new ingredient (optional)</p>
+            <%= dose_form.simple_fields_for :ingredient do |ingredient_form| %>
+              <%= ingredient_form.input :name, label: "New Ingredient Name" %>
+            <% end %>
+            <hr class="mt-5 mb-4">
+          </div>
         <% end %>
-        <!-- Add another ingredient -->
+        <!-- Add another ingredient button -->
         <%= link_to "#", class: "btn btn-primary mt-3 mb-4", data: { action: "click->form-field-vis#hiddenVisibleFields" } do %>
           <i class="fa-solid fa-plus"></i>
         <% end %>
         <!-- Create Tags -->
-        <h3 class="pink-font">Tags (up to 10)</h3>
-        <% counter_tag = 0 %>
-        <%= f.simple_fields_for :tags do |tag_form| %>
-          <% counter_tag += 1 %>
-          <%= tag_form.input :name, label: "Tag #{counter_tag}", prompt: "Name" %>
+        <div class="form-group">
+          <h3 class="pink-font">Tags (up to 10)</h3>
+          <% counter_tag = 0 %>
+          <%= f.simple_fields_for :tags do |tag_form| %>
+            <% counter_tag += 1 %>
+            <%= tag_form.input :name, label: "Tag #{counter_tag}", prompt: "Name" %>
+          <% end %>
+          <%= f.button :submit, "Create Cocktail", class: "btn btn-primary mt-4 p-2" %>
         <% end %>
-        <%= f.button :submit, "Create Cocktail", class: "btn btn-primary mt-4 p-2" %>
-      <% end %>
+      </div>
     </div>
   </div>
 </div>
