--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,45 +1,66 @@
 <div class="container">
   <h1>Create a Cocktail</h1>
-  <!-- Create cocktail -->
   <div class="row">
-    <div class="col-12" data-controller="form-field-vis">
+    <div class="col-12">
+
+      <!-- Create cocktail form -->
       <%= simple_form_for @cocktail, class: "form-control" do |f| %>
         <%= f.input :name %>
         <%= f.input :description, as: :text %>
-        <!-- Create doses and associated ingredients -->
-        <h3 class="pink-font">Ingredients (up to 5)</h3>
-        <% counter = 0 %>
-        <%= f.simple_fields_for :doses do |dose_form| %>
-          <% counter += 1 %>
-          <div data-form-field-vis-target="ingredient" hidden>
-            <!-- Hidden input field with `_destroy` as a substring value of the name attribute -->
-            <%= dose_form.input :_destroy, as: :hidden %>
 
-            <h4>Ingredient <%= counter %></h4>
-            <%= dose_form.input :amount, label: "Amount (ml)" %>
-            <%= dose_form.input :ingredient_id, collection: Ingredient.all, prompt: "Select Existing Ingredient" %>
-            <p>Or create a new ingredient (optional)</p>
-            <%= dose_form.simple_fields_for :ingredient do |ingredient_form| %>
-              <%= ingredient_form.input :name, label: "New Ingredient Name" %>
-            <% end %>
-            <hr class="mt-5 mb-4">
-          </div>
-        <% end %>
-        <!-- Add another ingredient button -->
-        <%= link_to "#", class: "btn btn-primary mt-3 mb-4", data: { action: "click->form-field-vis#hiddenVisibleFields" } do %>
-          <i class="fa-solid fa-plus"></i>
-        <% end %>
-        <!-- Create Tags -->
-        <div class="form-group">
+        <!-- Create doses and associated ingredients -->
+        <div class="form-group" data-controller="form-field-vis">
+          <h3 class="pink-font">Ingredients (up to 5)</h3>
+          <% counter = 0 %>
+          <%= f.simple_fields_for :doses do |dose_form| %>
+            <% counter += 1 %>
+            <div data-form-field-vis-target="ingredient" hidden>
+
+              <!-- Hidden input field with `_destroy` as a substring value of the name attribute -->
+              <%= dose_form.input :_destroy, as: :hidden %>
+
+              <h4>Ingredient <%= counter %></h4>
+              <%= dose_form.input :amount, label: "Amount (ml)" %>
+              <%= dose_form.input :ingredient_id, collection: Ingredient.all, prompt: "Select Existing Ingredient" %>
+              <p>Or create a new ingredient (optional)</p>
+              <%= dose_form.simple_fields_for :ingredient do |ingredient_form| %>
+                <%= ingredient_form.input :name, label: "New Ingredient Name" %>
+              <% end %>
+              <hr class="mt-5 mb-4">
+            </div>
+          <% end %>
+
+          <!-- Add another ingredient button -->
+          <%= link_to "#", class: "btn btn-secondary mt-3 mb-4", data: { action: "click->form-field-vis#hiddenVisibleFields" } do %>
+            <i class="fa-solid fa-plus"></i>
+          <% end %>
+        </div>
+
+        <!-- Create tags -->
+        <div class="form-group" data-controller="tag-field-vis">
           <h3 class="pink-font">Tags (up to 10)</h3>
           <% counter_tag = 0 %>
           <%= f.simple_fields_for :tags do |tag_form| %>
             <% counter_tag += 1 %>
-            <%= tag_form.input :name, label: "Tag #{counter_tag}", prompt: "Name" %>
+            <div data-tag-field-vis-target="tag" hidden>
+
+              <!-- Hidden input field with `_destroy` as a substring value of the name attribute -->
+              <%= tag_form.input :_destroy, as: :hidden %>
+
+              <%= tag_form.input :name, label: "Tag #{counter_tag}", prompt: "Name" %>
+            </div>
           <% end %>
-          <%= f.button :submit, "Create Cocktail", class: "btn btn-primary mt-4 p-2" %>
-        <% end %>
-      </div>
+
+          <!-- Add another tag button -->
+          <%= link_to "#", class: "btn btn-secondary mt-3 mb-4", data: { action: "click->tag-field-vis#hiddenVisibleTags" } do %>
+            <i class="fa-solid fa-plus"></i>
+          <% end %>
+        </div>
+        
+        <!-- Submit button -->
+        <%= f.button :submit, "Create Cocktail", class: "btn btn-primary mt-4 p-2" %>
+      <% end %>
+      <!-- Form close -->
     </div>
   </div>
 </div>
