--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -1,3 +1,52 @@
 <div class="container">
-  <h1>Edit Cocktail</h1>
+  <h1 class="mt-5">Edit <%= @cocktail.name %> cocktail</h1>
+  <div class="row">
+    <div class="col-12">
+      <!-- Create cocktail form -->
+      <%= simple_form_for @cocktail, class: "form-control" do |f| %>
+        <%= f.input :name %>
+        <%= f.input :description, as: :text %>
+        <!-- Create doses and associated ingredients -->
+        <div class="form-group">
+          <h3 class="pink-font mt-5">Ingredients (up to 5)</h3>
+          <% counter = 0 %>
+          <%= f.simple_fields_for :doses do |dose_form| %>
+            <% counter += 1 %>
+
+              <!-- Hidden input field with `_destroy` as a substring value of the name attribute -->
+              <%#= dose_form.input :_destroy, as: :hidden %>
+
+              <h4>Ingredient <%= counter %></h4>
+              <%= dose_form.input :amount, label: "Amount (ml)" %>
+              <%= dose_form.input :ingredient_id, collection: Ingredient.all, prompt: "Select Existing Ingredient" %>
+              <p>Or create a new ingredient (optional)</p>
+              <%= dose_form.simple_fields_for :ingredient do |ingredient_form| %>
+                <%= ingredient_form.input :name, label: "New Ingredient Name" %>
+              <% end %>
+              <hr class="mt-5 mb-4">
+
+          <% end %>
+        </div>
+
+        <!-- Create tags -->
+        <div class="form-group">
+          <h3 class="pink-font mt-5">Tags (up to 10)</h3>
+          <% counter_tag = 0 %>
+          <%= f.simple_fields_for :tags do |tag_form| %>
+            <% counter_tag += 1 %>
+
+              <!-- Hidden input field with `_destroy` as a substring value of the name attribute -->
+              <%#= tag_form.input :_destroy, as: :hidden %>
+
+              <%= tag_form.input :name, label: "Tag #{counter_tag}", prompt: "Name" %>
+
+          <% end %>
+        </div>
+
+        <!-- Submit button -->
+        <%= f.button :submit, "Edit Cocktail", class: "btn btn-primary mt-4 p-2" %>
+      <% end %>
+      <!-- Form close -->
+    </div>
+  </div>
 </div>
