--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsMisterCocktail</title>
+    <title>Sipfolio</title>
     <%= favicon_link_tag "cocktail-journal2.png" %>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
