--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,50 +9,56 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto gap-2">
-        <%# if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to cocktails_path, class: "nav-link active fs-5", "aria-current": "page" do %>
-            Browse <i class="fa-regular fa-rectangle-list"></i>
-          <% end %>
-        </li>
-        <li class="nav-item">
-          <%= link_to cocktails_path, class: "nav-link fs-5" do %>
-            Journal <i class="fa-solid fa-book"></i>
-          <% end %>
-        </li>
-        <li class="nav-item">
-          <%= link_to new_cocktail_path, class: "nav-link fs-5" do %>
-            New Cocktail <i class="fa-solid fa-martini-glass-citrus"></i>
-          <% end %>
-        </li>
-        <li class="nav-item">
-          <%= link_to new_cocktail_path, class: "nav-link fs-5" do %> SipSense Mix <i class="fa-solid fa-wand-magic-sparkles"></i>
-          <% end %>
-        </li>
-        <li class="nav-item">
-          <%= link_to new_cocktail_path, class: "nav-link fs-5 me-2" do %> SipSense AI <i class="fa-solid fa-comment-dots"></i>
-          <% end %>
-        </li>
-        <li class="nav-item dropdown">
-          <%= image_tag "happy-dog5.png", alt: "user avatar image", class: "avatar dropdown-toggle me-3", id:"navbarDropdown", data: { bs_toggle: "dropdown" }, "aria-haspopup": "true", "aria-expanded": "false" %>
-          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navBarDropdown">
-            <%= link_to "#", class: "dropdown-item fs-5" do %>
-              <i class="fa-solid fa-user"></i> Profile
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to cocktails_path, class: "nav-link active fs-5", "aria-current": "page" do %>
+              Browse <i class="fa-regular fa-rectangle-list"></i>
             <% end %>
-            <!-- Temporary Log out button that does not work. Remove once you add "devise" gem and user sessions. -->
-            <%= link_to "#", class: "dropdown-item fs-5" do %>
-              <i class="fa-solid fa-right-from-bracket"></i> Log out
+          </li>
+          <li class="nav-item">
+            <%= link_to journal_path, class: "nav-link fs-5" do %>
+              Journal <i class="fa-solid fa-book"></i>
             <% end %>
-            <%#= link_to "Log out", "#" class: "dropdown-item", data: { turbo_method: :delete} %>
-            <%#= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: { turbo_method: :delete} %>
-          </div>
-        </li>
-        <%# else %>
-        <!-- <li class="nav-item"> -->
-        <%#= link_to "Login", new_user_session_path, class: "nav-link" %>
-        <!-- </li> -->
-        <%# end %>
-      </ul>
+          </li>
+          <li class="nav-item">
+            <%= link_to new_cocktail_path, class: "nav-link fs-5" do %>
+              New Cocktail <i class="fa-solid fa-martini-glass-citrus"></i>
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to new_cocktail_path, class: "nav-link fs-5" do %> SipSense Mix <i class="fa-solid fa-wand-magic-sparkles"></i>
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to new_cocktail_path, class: "nav-link fs-5 me-2" do %> SipSense AI <i class="fa-solid fa-comment-dots"></i>
+            <% end %>
+          </li>
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" aria-haspopup="true">
+              <%= image_tag "happy-dog5.png", alt: "user avatar image", class: "avatar" %>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navBarDropdown">
+              <li>
+                <%= link_to "Profile", user_profile_path, class: "dropdown-item fs-5" %>
+                  <!-- <i class="fa-solid fa-user"></i> Profile -->
+                  <%# end %>
+              </li>
+              <li>
+                <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item fs-5", data: { turbo_method: :delete} %>
+                  <!-- <i class="fa-solid fa-right-from-bracket"> Log out -->
+                  <%# end %>
+                </li>
+              </ul>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to "Login", new_user_session_path, class: "nav-link fs-5" %>
+            </li>
+            <li>
+              <%= link_to "Sign-up", new_user_registration_path, class: "nav-link fs-5 me-4"  %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
