--- a/app/views/pages/journal.html.erb
+++ b/app/views/pages/journal.html.erb
@@ -3,7 +3,8 @@
   <p class="fs-5 mb-4">
     Manage and organize all your cocktails in one place.
   </p>
-  <h2 class="mt-5">My Cocktail Recipes 
+  <!-- User created cocktails -->
+  <h2 class="mt-5">My Cocktail Recipes
     <i class="fa-duotone fa-solid fa-martini-glass-citrus"></i>
   </h2>
   <div class="row d-flex justify-content-between">
@@ -39,7 +40,49 @@
       </div>
     <% end %>
   </div>
+  <!-- Favorited cocktails -->
   <h2 class="mt-5">My Favorited Cocktails
     <i class="fa-solid fa-heart"></i>
   </h2>
+  <div class="row d-flex justify-content-between">
+    <% @cocktail_favs.each do |favorite| %>
+      <% @cocktails.each do |cocktail| %>
+        <% if favorite == cocktail %>
+          <div class="col-12 col-md-6 col-lg-4">
+            <%= link_to cocktail_path(cocktail), class: "text-decoration-none" do %>
+              <div class="card shadow card-hover p-3 m-1 mt-4">
+                <div class="d-flex justify-content-between align-items-center mb-2">
+                  <h2 class="fst-italic"><%= cocktail.name.capitalize %></h2>
+                  <!-- Favorited cocktail icon -->
+                  <i class="fa-solid fa-heart h1-font fs-2 me-2"></i>
+                </div>
+                <img src="https://www.pollinations.ai/prompt/<%= cocktail.name %> cocktail drink" alt="<%= cocktail.name %>" class="rounded border-bottom" >
+                <div class="mt-3">
+                  <p class="ingredients">
+                    <% cocktail.doses.each do |dose| %>
+                      <% if dose.cocktail.name == cocktail.name %>
+                        <%= dose.ingredient.name.capitalize %>: <span class="fst-italic"><%= number_with_precision(dose.amount, precision: 0) %>ml</span> <span class="fs-5 light">|</span>
+                      <% end %>
+                    <% end %>
+                  </p>
+                </div>
+                <div>
+                  <div class="d-flex align-items-center flex-wrap" style="gap: 0.5rem;">
+                    <h5 class="text-light mb-0 me-2">Tags:</h5>
+                    <% cocktail.tags.each do |tag| %>
+                      <% if tag.cocktail.name == cocktail.name %>
+                        <p class="card rounded px-2 py-1 txt-grey mb-0" style="display: inline-block;">
+                          <%= tag.name.capitalize %>
+                        </p>
+                      <% end %>
+                    <% end %>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        <% end %>
+      <% end %>
+    <% end %>
+  </div>
 </div>
