added styling and hover effect to review images and more bottom margin.

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -100,15 +100,15 @@
         <% end %>
       </div>
       <% if user_review.img_1.present? || user_review.img_2.present? || user_review.img_3.present? %>
-        <div class="card-img-bottom d-flex justify-content-start gap-3 mt-3">
+        <div class="card-img-bottom d-flex justify-content-start gap-3 mt-3 mb-2">
           <% if user_review.img_1.present? %>
-            <img src="<%= user_review.img_1 %>" alt="cocktail image #1" class="img-thumbnail" style="max-height: 225px;">
+            <img src="<%= user_review.img_1 %>" alt="cocktail image #1" class="img-thumbnail card-hover" style="max-height: 225px;">
           <% end %>
           <% if user_review.img_2.present? %>
-            <img src="<%= user_review.img_2 %>" alt="cocktail image #2" class="img-thumbnail" style="max-height: 225px;">
+            <img src="<%= user_review.img_2 %>" alt="cocktail image #2" class="img-thumbnail card-hover" style="max-height: 225px;">
           <% end %>
           <% if user_review.img_3.present? %>
-            <img src="<%= user_review.img_3 %>" alt="cocktail image #3" class="img-thumbnail" style="max-height: 225px;">
+            <img src="<%= user_review.img_3 %>" alt="cocktail image #3" class="img-thumbnail card-hover" style="max-height: 225px;">
           <% end %>
         </div>
       <% end %>
